[gd_scene load_steps=4 format=3 uid="uid://dbqh2rulpcu1k"]

[ext_resource type="Script" path="res://src/UI/CategoryPanel/Scripts/CategoryButton.gd" id="1"]
[ext_resource type="Theme" uid="uid://hgc7wambejk3" path="res://Assets/MainEditor.tres" id="2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_f2g8q"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.0431373, 0.196078, 0.372549, 0.6)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="Button" type="Button"]
offset_right = 200.0
offset_bottom = 20.0
theme = ExtResource("2")
theme_override_styles/pressed = SubResource("StyleBoxFlat_f2g8q")
toggle_mode = true
script = ExtResource("1")

[node name="PopupMenu" type="PopupMenu" parent="."]
item_count = 8
item_0/text = "CATEGORY_RENAME"
item_0/id = 0
item_1/text = "CATEGORY_DUPLICATE"
item_1/id = 4
item_2/text = ""
item_2/id = 1
item_2/separator = true
item_3/text = "CATEGORY_REIMPORT"
item_3/id = 2
item_4/text = "CATEGORY_DELETE"
item_4/id = 3
item_5/text = ""
item_5/id = 5
item_5/separator = true
item_6/text = "CATEGORY_OPEN_IN_FILE"
item_6/id = 6
item_7/text = "CANCEL"
item_7/id = 7

[node name="LineEdit" type="LineEdit" parent="."]
visible = false
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -147.0
offset_top = -12.0
offset_right = 147.0
offset_bottom = 12.0

[connection signal="gui_input" from="." to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="." to="." method="_on_Button_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
[connection signal="mouse_exited" from="PopupMenu" to="." method="_on_PopupMenu_mouse_exited"]
[connection signal="visibility_changed" from="PopupMenu" to="." method="_on_popup_menu_visibility_changed"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_LineEdit_text_entered"]
